# e-commerce

./: .env  .gitignore  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  res.txt
accounts/: admin.py  manager.py  models.py  urls.py
accounts/accounts/: settings.py
accounts/api_endpoints/: __init__.py
accounts/api_endpoints/LoginSession/: views.py
accounts/api_endpoints/LogoutSession/: views.py
accounts/migrations/: 0001_initial.py  0002_cart_cartitem.py
common/: admin.py  choices.py  models.py
common/migrations/: 0001_initial.py
core/: settings.py  urls.py
files/: IMG_9793.DNG
orders/: admin.py  models.py  urls.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py  urls.py
products/api_endpoints/: __init__.py
products/api_endpoints/BrandCreate/: serializers.py  views.py
products/api_endpoints/BrandDelete/: views.py
products/api_endpoints/BrandList/: serializers.py  views.py
products/api_endpoints/BrandUpdate/: views.py
products/api_endpoints/CategoryCreate/: views.py
products/api_endpoints/CategoryDelete/: views.py
products/api_endpoints/CategoryUpdate/: views.py
products/api_endpoints/ColorCreate/: views.py
products/api_endpoints/ColorList/: serializers.py
products/api_endpoints/ColorUpdate/: serializers.py  views.py
products/api_endpoints/ProductCreate/: views.py
products/api_endpoints/ProductDelete/: views.py
products/migrations/: 0001_initial.py  0002_rename_category_id_product_category.py  0003_alter_brand_options_alter_category_options_and_more.py
(+62 files in other folders)
