[project]
name = "e-commerce"
version = "0.1.0"
description = "e-commerce backend in Django"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "black>=25.1.0",
    "django==5.2.1",
    "django-jazzmin==3.0.1",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "drf-yasg==1.21.10",
    "inflection==0.5.1",
    "packaging==25.0",
    "pillow==11.2.1",
    "psycopg2-binary==2.9.10",
    "pyjwt==2.9.0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "ruff>=0.11.10",
    "sqlparse==0.5.3",
    "uritemplate==4.1.1",
]
